Revert "dark mode toggle fix"
This reverts commit 8bdc76cbc6095a5c88cd042b944a801661cee222.

--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -19,8 +19,8 @@ body {
   font-size: 1rem;
   font-weight: 600;
   line-height: 1.54;
-  background-color: var(--background);
-  color: var(--color) !important;
+  background-color: var(--light-background);
+  color: var(--light-color);
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   font-feature-settings: "liga", "tnum", "case", "calt", "zero", "ss01", "locl";
@@ -31,10 +31,10 @@ body {
     font-size: 1rem;
   }
 
-  /* &.dark-theme {
-    background-color: var(--background);
-    color: var(--color) !important;
-  } */
+  &.dark-theme {
+    background-color: var(--dark-background);
+    color: var(--dark-color);
+  }
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -77,8 +77,8 @@ h4 {
   }
 }
 
-a, a:visited, a:active, a:hover {
-  color: inherit !important;
+a {
+  color: inherit;
 }
 
 img {
@@ -140,11 +140,15 @@ code {
   font-family: Consolas, Monaco, Andale Mono, Ubuntu Mono, monospace;
   font-feature-settings: normal;
   font-weight: normal;
-  background: var(--background-secondary);
+  background: var(--light-background-secondary);
   padding: 1px 6px;
   margin: 0 2px;
   border-radius: 5px;
   font-size: .9rem;
+
+  .dark-theme & {
+    background: var(--dark-background-secondary);
+  }
 }
 
 pre {
@@ -196,12 +200,20 @@ table {
 }
 
 table, th, td {
-  border: 1px solid var(--color);
+  border: 1px solid var(--light-color);
   padding: 10px;
+
+  .dark-theme & {
+    border-color: var(--dark-color);
+  }
 }
 
 th {
-  background: var(--background-secondary);
+  background: var(--light-background-secondary);
+
+  .dark-theme & {
+    background: var(--dark-background-secondary);
+  }
 }
 
 ul, ol {
@@ -274,8 +286,12 @@ button, input, textarea {
 hr {
   width: 100%;
   border: none;
-  background: var(--border-color);
+  background: var(--light-border-color);
   height: 1px;
+
+  .dark-theme & {
+    background: var(--dark-border-color);
+  }
 }
 
 .infoBanner {
@@ -286,7 +302,10 @@ hr {
   border-radius: 10px;
   width: 70vw;
   max-width: 750px;
-  background: var(--background-secondary);
+  background: var(--light-background-secondary);
+  .dark-theme & {
+    background: var(--dark-background-secondary);
+  }
 
   span {
     font-weight: bold;
@@ -366,8 +385,8 @@ footer {
     text-align: center;
   }
 
-  background: linear-gradient( rgba(255,255,255,0) 10%, var(--header-background));
-  /* :global .dark-theme :local & {
-    background: linear-gradient( rgba(0,0,0,0) 10%, var(--header-background));
-  } */
+  background: linear-gradient( rgba(255,255,255,0) 10%, var(--light-header-background));
+  :global .dark-theme :local & {
+    background: linear-gradient( rgba(0,0,0,0) 10%, var(--dark-header-background));
+  }
 }
