--- a/src/styles/sidebar.module.css
+++ b/src/styles/sidebar.module.css
@@ -11,9 +11,9 @@
         margin-top: 0;
         margin-bottom: 10px;
         border-radius: 10px;
-        background: var(--background-secondary);
+        background: var(--light-background-secondary);
         :global .dark-theme :local & {
-          background: var(--background-secondary);
+          background: var(--dark-background-secondary);
         }
         @media (--phone) {
             text-align: center;
@@ -55,13 +55,13 @@
     margin-bottom: 10px;
     input {
         border: none;
-        border-bottom: 2px solid var(--color);
-        background-color: var(--background);
+        border-bottom: 2px solid var(--light-color);
+        background-color: var(--light-background);
         :global .dark-theme :local & {
-            border-bottom: 2px solid var(--color);
-            background-color: var(--background);
-            caret-color: var(--color);
-            color: var(--color);
+            border-bottom: 2px solid var(--dark-color);
+            background-color: var(--dark-background);
+            caret-color: var(--dark-color);
+            color: var(--dark-color);
         }
         outline: none;
         flex-grow: 1;
@@ -83,9 +83,9 @@
         border-radius: 10px;
         opacity: 0;
         transition: opacity 0.2s;
-        background-color: var(--header-background);
+        background-color: var(--light-header-background);
         :global .dark-theme :local & {
-            background-color: var(--header-background);
+            background-color: var(--dark-header-background);
         }
         .noresults {
             padding-left: 10px;
